--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/mandle_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>만들만들</title>
   </head>
 
   <body>
