--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/mandle_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>만들만들</title>
+    <title>만들만들 | 함께 만드는 즐거움으로, 일상을 가득 채우다</title>
   </head>
 
   <body>
